fix all route with validation
